<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RegisterApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9fq-Rw-VAE">
                                <rect key="frame" x="16" y="64" width="382" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="25C-tN-hec"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="whm-nm-oHG">
                                <rect key="frame" x="16" y="114" width="382" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="cxx-nl-3sW"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="3La-jP-ggB">
                                <rect key="frame" x="351" y="204" width="49" height="31"/>
                                <accessibility key="accessibilityConfiguration" hint="switchHint" identifier="switchident" label="switchLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="31" id="VZ5-5i-NxU"/>
                                    <constraint firstAttribute="width" constant="47" id="WP3-96-niL"/>
                                </constraints>
                                <connections>
                                    <action selector="approve_change:" destination="BYZ-38-t0r" eventType="valueChanged" id="e2w-hn-MNt"/>
                                </connections>
                            </switch>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tSq-ye-uo0">
                                <rect key="frame" x="308" y="245" width="90" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="QAe-eN-OLU"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="mIy-vY-hyf"/>
                                </constraints>
                                <state key="normal" title="Register"/>
                                <connections>
                                    <action selector="register_user:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BMJ-OA-ggE"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Born year" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MQT-Op-VKx">
                                <rect key="frame" x="300" y="164" width="98" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="2my-3t-8va"/>
                                    <constraint firstAttribute="height" constant="30" id="5nE-Gz-D99"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bqN-yh-xc2">
                                <rect key="frame" x="16" y="54" width="382" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" identifier="errorId"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Approve terms" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="To4-kY-gqH">
                                <rect key="frame" x="200" y="204" width="141" height="31"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="31" id="1D1-RU-D8j"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="130" id="ChG-EL-1Fx"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="3La-jP-ggB" firstAttribute="leading" secondItem="To4-kY-gqH" secondAttribute="trailing" constant="10" id="6yp-Fm-wyl"/>
                            <constraint firstItem="whm-nm-oHG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="7c2-ws-ILo"/>
                            <constraint firstItem="To4-kY-gqH" firstAttribute="leading" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="200" id="9cl-yq-PN4"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="whm-nm-oHG" secondAttribute="trailing" constant="16" id="AQT-v3-Kc0"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="MQT-Op-VKx" secondAttribute="trailing" constant="16" id="E6O-ON-Psy"/>
                            <constraint firstItem="tSq-ye-uo0" firstAttribute="top" secondItem="3La-jP-ggB" secondAttribute="bottom" constant="10" id="FkB-Xr-NpQ"/>
                            <constraint firstItem="9fq-Rw-VAE" firstAttribute="top" secondItem="bqN-yh-xc2" secondAttribute="bottom" constant="10" id="HTI-bi-w0K"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3La-jP-ggB" secondAttribute="trailing" constant="16" id="Ifu-iz-Zl8"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9fq-Rw-VAE" secondAttribute="trailing" constant="16" id="Pvh-Mn-GZi"/>
                            <constraint firstItem="MQT-Op-VKx" firstAttribute="top" secondItem="whm-nm-oHG" secondAttribute="bottom" constant="20" id="R2C-Ph-S62"/>
                            <constraint firstItem="bqN-yh-xc2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="WPt-ve-wXW"/>
                            <constraint firstItem="3La-jP-ggB" firstAttribute="top" secondItem="MQT-Op-VKx" secondAttribute="bottom" constant="10" id="WTJ-rJ-EDn"/>
                            <constraint firstItem="MQT-Op-VKx" firstAttribute="leading" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="300" id="aRT-la-soC"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bqN-yh-xc2" secondAttribute="trailing" constant="16" id="g1v-hS-aUs"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tSq-ye-uo0" secondAttribute="trailing" constant="16" id="jad-VV-ebT"/>
                            <constraint firstItem="To4-kY-gqH" firstAttribute="top" secondItem="MQT-Op-VKx" secondAttribute="bottom" constant="10" id="l6d-7I-haa"/>
                            <constraint firstItem="whm-nm-oHG" firstAttribute="top" secondItem="9fq-Rw-VAE" secondAttribute="bottom" constant="20" id="qhr-HO-287"/>
                            <constraint firstItem="bqN-yh-xc2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="uZd-Ob-q7Y"/>
                            <constraint firstItem="9fq-Rw-VAE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="wFg-6D-UOJ"/>
                            <constraint firstItem="tSq-ye-uo0" firstAttribute="leading" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="310" id="wcp-IN-7in"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="approveterms_switch" destination="3La-jP-ggB" id="XUf-Ym-IGx"/>
                        <outlet property="bornyear_tf" destination="MQT-Op-VKx" id="yrp-Xd-8F4"/>
                        <outlet property="email_tf" destination="9fq-Rw-VAE" id="h08-Ti-puR"/>
                        <outlet property="error_label" destination="bqN-yh-xc2" id="Z0H-JP-wsh"/>
                        <outlet property="password_tf" destination="whm-nm-oHG" id="iir-dt-IGg"/>
                        <outlet property="register_button" destination="tSq-ye-uo0" id="Cgl-sQ-0te"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
    </scenes>
</document>
